--- a/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
@@ -74,10 +74,8 @@
                     <p>YELLAMMA BANDA, KUKATPALLY,</p>
                     <p>HYDERABAD-72</p>
                     <p>MOBILE NO:9848799473</p>
-                    <p>PAN NO.ABVFS5272J</p>
-                    <p>GSTIN CODE:36ABVFS5272J1ZD</p>
-                    <p> <a href="srianjanatransport@redifmail.com">srianjanatransport@redifmail.com</a></p>
-                    <p> <a href="http://www.srianjanatransport.com">http://www.srianjanatransport.com</a> </p>
+                    <p>PAN NO.AOVPT1087K</p>
+                    <p>GSTIN CODE:36AOVPT1087K1Z1</p>
                 </th>
                 <th style=" border: none; float: right; padding-left:100px">
                     <h3>INVOICE</h3>
@@ -85,7 +83,7 @@
                     <p>HDFC BANK LTD.</p>
                     <p>VIVEKANANDA NAGAR, KUKATPALLY</p>
                     <p>IFSC-HDFC0001639</p>
-                    <p>CURRENT A/C.#16392000002774</p>
+                    <p>CURRENT A/C.#16397630000150</p>
 
 
                 </th>
@@ -96,7 +94,7 @@
                 <table class="table1" style="margin-bottom:-6px !important;width: 100%;">
                     <thead>
                     <tr>
-                        <th colspan="3" style="font-size: 12px;">
+                        <th colspan="3" style="font-size: 12px">
                             <b>INVOICE</b>
                         </th>
                     </tr>
@@ -111,8 +109,8 @@
                                 <p> Pol No: 506/9, DATTATREYA COLONY,</p>
                                 <p> YELLAMMABANDA, KUKATPALLY, HYDERABAD-72,</p>
                                 <p> PH NO: 9848799473, 9573009187 </p>
-                                <p> GSTIN: 36ABVFS5272J1ZD </p>
-                                <p> Email:<a href="#">srianjanatransport@rediffmail.com</a></p>
+                                <p> GSTIN: 36AOVPT1087K1Z1 </p>
+                                <p> Email:<a href="#">srianjanalogistics@rediffmail.com</a></p>
                                 <p> <a href="#">http://www.srianjanatransport.com</a></p>
                             </small>
                         </td>
@@ -195,7 +193,7 @@
                     </tr>
                     <tr>
                         <th>
-                            <p style="text-align: center;">No of Pallets</p>
+                            <p style="text-align: center;">No of Drums</p>
                         </th>
                         <th>
                             <p style="text-align: center;">Despatched through</p>
@@ -245,13 +243,13 @@
                     <tr>
                         <td scope="row"><p style="font-size:12px;text-align: center">1</p>
                         </td>
-                        <td colspan="" style="width: 331px">
+                        <td colspan="" style="width: 318px">
                             {{#each invoiceDetails.trip}}
                             <p><b>Vehicle No:{{this.vehicleNo}}</b></p>
                             {{/each}}
-                            <p style="float: right">{{specialInstructions}}</p>
+                            <p style="float: right;">{{specialInstructions}}</p>
                             <p> {{invoiceDetails.temparatureCargo}} </p>
-                            <p> {{invoiceDetails.noOfpallets}} Pallets</p>
+                            <p> {{invoiceDetails.pallets}} Drums</p>
                             {{#each invoiceDetails.trip}}
                             <p>Loading Date:{{this.loadedOn}}</p>
                             {{/each}}
@@ -308,7 +306,7 @@
                 <td style="border:none;">
                     <p>Amount Chargeable (in Words)</p>
                     <p><b>INR {{invoiceDetails.pdfTotalAmountWords}} Rupees Only</b></p> <br>
-                    <p><b>Company's PAN:ABVFS5272J</b></p>
+                    <p><b>Company's PAN:AOVPT1087K</b></p>
                     <p><b><u> Declaration:</u></b></p>
                     <p><b>Transporter is not liable to pay Goods and Service Tax:</b></p>
                     <p><b>(1)Goods and Service tax is paid on reverse charge mechanism
@@ -322,13 +320,13 @@
                     <p style="float:right;padding-left: 100px">E&O.E</p>
                     <p style="margin-top: 80px;">Company's Bank DETAILS:</p>
                     <p>Bank Name&nbsp;&nbsp;:&nbsp;<b>HDFC BANK</b></p>
-                    <p>A/C No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>16392000002774</b></p>
+                    <p>A/C No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>16397630000150</b></p>
                     <p>IFSC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>HDFC0001639</b></p>
                     <p>Branch&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>Vivekananda nagar</b></p>
                     <div style="border: 1px solid black;border-collapse: collapse;margin-right: -2px;margin-top: 10px;margin-bottom: -2px;width: 200px; ">
                         <p style="margin-right: 20px; text-align: center;">for</p> <p style="font-size: 10px;text-align: center;"> SRI ANJANA TRANSPORT </p>
-                            <br>
-                            <br>
+                        <br>
+                        <br>
                         <p style="margin-right: 20px; text-align: center;"><b>Authorised Signature</b></p>
                     </div>
 
