--- a/server/pdfTemplates/anjana/anjanaTransportInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaTransportInvoice.html
@@ -96,7 +96,7 @@
                 <table class="table1" style="margin-bottom:-6px !important;width: 100%;">
                     <thead>
                     <tr>
-                        <th colspan="3" style="font-size: 12px;">
+                        <th colspan="3" style="font-size: 12px">
                             <b>INVOICE</b>
                         </th>
                     </tr>
@@ -327,8 +327,8 @@
                     <p>Branch&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>Vivekananda nagar</b></p>
                     <div style="border: 1px solid black;border-collapse: collapse;margin-right: -2px;margin-top: 10px;margin-bottom: -2px;width: 200px; ">
                         <p style="margin-right: 20px; text-align: center;">for</p> <p style="font-size: 10px;text-align: center;"> SRI ANJANA TRANSPORT </p>
-                            <br>
-                            <br>
+                        <br>
+                        <br>
                         <p style="margin-right: 20px; text-align: center;"><b>Authorised Signature</b></p>
                     </div>
 
