--- a/server/pdfTemplates/anjana/anjanaTransportInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaTransportInvoice.html
@@ -96,17 +96,17 @@
                 <table class="table1" style="margin-bottom:-6px !important;width: 100%;">
                     <thead>
                     <tr>
-                        <th colspan="3" style="font-size: 12px">
+                        <th colspan="3" style="font-size: 12px;">
                             <b>INVOICE</b>
                         </th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <td rowspan="7" scope="row">
+                        <td rowspan="7" scope="row" style="width: 200PX">
                             <b>
                                 <p> SRI ANJANA TRANSPORT</p>
-                            </b> <br>
+                            </b>
                             <small>
                                 <p> Pol No: 506/9, DATTATREYA COLONY,</p>
                                 <p> YELLAMMABANDA, KUKATPALLY, HYDERABAD-72,</p>
@@ -116,7 +116,7 @@
                                 <p> <a href="#">http://www.srianjanatransport.com</a></p>
                             </small>
                         </td>
-                        <th>
+                        <th style="width: 167px">
                             <p style="text-align: center;">Invoice No</p>
                         </th>
                         <th>
@@ -249,7 +249,7 @@
                             {{#each invoiceDetails.trip}}
                             <p><b>Vehicle No:{{this.vehicleNo}}</b></p>
                             {{/each}}
-                            <p style="float: right">{{specialInstructions}}</p>
+                            <p style="float: right;margin-right: 10px;"><b>{{invoiceDetails.specialInstructions}}</b></p>
                             <p> {{invoiceDetails.temparatureCargo}} </p>
                             <p> {{invoiceDetails.noOfpallets}} Pallets</p>
                             {{#each invoiceDetails.trip}}
