small Changes in Invoice tables

--- a/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
@@ -69,7 +69,7 @@
         <table>
             <tr>
                 <th style="border:none">
-                    <h3><b>SRI ANJANA TRANSPORT</b></h3>
+                    <h3><b>SRI ANJANA LOGISTICS</b></h3>
                     <p>PLOT NO.506/9, DATATREYA NAGAR COLONY,</p>
                     <p>YELLAMMA BANDA, KUKATPALLY,</p>
                     <p>HYDERABAD-72</p>
@@ -101,9 +101,9 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td rowspan="7" scope="row">
+                        <td rowspan="7" scope="row" style="width: 200PX;">
                             <b>
-                                <p> SRI ANJANA TRANSPORT</p>
+                                <p> SRI ANJANA LOGISTICS</p>
                             </b> <br>
                             <small>
                                 <p> Pol No: 506/9, DATTATREYA COLONY,</p>
@@ -243,7 +243,7 @@
                     <tr>
                         <td scope="row"><p style="font-size:12px;text-align: center">1</p>
                         </td>
-                        <td colspan="" style="width: 318px">
+                        <td colspan="" style="width: 331px">
                             {{#each invoiceDetails.trip}}
                             <p><b>Vehicle No:{{this.vehicleNo}}</b></p>
                             {{/each}}
@@ -306,7 +306,7 @@
                 <td style="border:none;">
                     <p>Amount Chargeable (in Words)</p>
                     <p><b>INR {{invoiceDetails.pdfTotalAmountWords}} Rupees Only</b></p> <br>
-                    <p><b>Company's PAN:AOVPT1087K</b></p>
+                    <p><b>Company's PAN:AOVPT1087K</b></p><br>
                     <p><b><u> Declaration:</u></b></p>
                     <p><b>Transporter is not liable to pay Goods and Service Tax:</b></p>
                     <p><b>(1)Goods and Service tax is paid on reverse charge mechanism
@@ -318,7 +318,7 @@
                 </td>
                 <td style=" border:none;float: left; margin-left:100px;text-align: left;">
                     <p style="float:right;padding-left: 100px">E&O.E</p>
-                    <p style="margin-top: 80px;">Company's Bank DETAILS:</p>
+                    <p style="margin-top: 90px;">Company's Bank DETAILS:</p>
                     <p>Bank Name&nbsp;&nbsp;:&nbsp;<b>HDFC BANK</b></p>
                     <p>A/C No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>16397630000150</b></p>
                     <p>IFSC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>HDFC0001639</b></p>
