--- a/server/pdfTemplates/anjana/anjanaTransportInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaTransportInvoice.html
@@ -308,7 +308,7 @@
                 <td style="border:none;">
                     <p>Amount Chargeable (in Words)</p>
                     <p><b>INR {{invoiceDetails.pdfTotalAmountWords}} Rupees Only</b></p> <br>
-                    <p><b>Company's PAN:ABVFS5272J</b></p>
+                    <p><b>Company's PAN:ABVFS5272J</b></p><br>
                     <p><b><u> Declaration:</u></b></p>
                     <p><b>Transporter is not liable to pay Goods and Service Tax:</b></p>
                     <p><b>(1)Goods and Service tax is paid on reverse charge mechanism
@@ -320,7 +320,7 @@
                 </td>
                 <td style=" border:none;float: left; margin-left:100px;text-align: left;">
                     <p style="float:right;padding-left: 100px">E&O.E</p>
-                    <p style="margin-top: 80px;">Company's Bank DETAILS:</p>
+                    <p style="margin-top: 90px;">Company's Bank DETAILS:</p>
                     <p>Bank Name&nbsp;&nbsp;:&nbsp;<b>HDFC BANK</b></p>
                     <p>A/C No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>16392000002774</b></p>
                     <p>IFSC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>HDFC0001639</b></p>
