--- a/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
@@ -69,7 +69,7 @@
         <table>
             <tr>
                 <th style="border:none">
-                    <h3><b>SRI ANJANA TRANSPORT</b></h3>
+                    <h3><b>SRI ANJANA LOGISTICS</b></h3>
                     <p>PLOT NO.506/9, DATATREYA NAGAR COLONY,</p>
                     <p>YELLAMMA BANDA, KUKATPALLY,</p>
                     <p>HYDERABAD-72</p>
