font changes in invoice

--- a/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
@@ -12,14 +12,14 @@
     <script src="main.js"></script>
     <style>
         h3 {
-            color: green;
+            color: orangered;
             text-decoration: underline;
             text-align: left;
-
+            font-family: "Lucida Grande", "Arial", sans-serif;
         }
 
         h6 {
-            color: green;
+            color: orangered;
             text-decoration: underline;
             text-align: left;
             margin-top: 5px;
@@ -69,7 +69,7 @@
         <table>
             <tr>
                 <th style="border:none">
-                    <h3><b>SRI ANJANA LOGISTICS</b></h3>
+                    <h3><b>SRI&nbsp;ANJANA&nbsp;LOGISTICS</b></h3>
                     <p>PLOT NO.506/9, DATATREYA NAGAR COLONY,</p>
                     <p>YELLAMMA BANDA, KUKATPALLY,</p>
                     <p>HYDERABAD-72</p>
@@ -115,7 +115,7 @@
                             </small>
                         </td>
                         <th>
-                            <p style="text-align: center;">Invoice No</p>
+                            <p style="text-align: center;width: 167px">Invoice No</p>
                         </th>
                         <th>
                             <p style="text-align: center;">Dated</p>
