--- a/server/pdfTemplates/anjana/invoice.html
+++ b/server/pdfTemplates/anjana/invoice.html
@@ -15,6 +15,7 @@
             color: green;
             text-decoration: underline;
             text-align: left;
+            font-family: "Lucida Grande", "Arial", sans-serif;
 
         }
 
@@ -69,7 +70,7 @@
         <table>
             <tr>
                 <th style="border:none">
-                    <h3><b>SRI ANJANA TRANSPORT</b></h3>
+                    <h3><b>SRI&nbsp;ANJANA&nbsp;TRANSPORT</b></h3>
                     <p>PLOT NO.506/9, DATATREYA NAGAR COLONY,</p>
                     <p>YELLAMMA BANDA, KUKATPALLY,</p>
                     <p>HYDERABAD-72</p>
