--- a/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
@@ -285,7 +285,7 @@
                                 </tr>
                             </table>
                         </td>
-                        <td></td>
+                        <td style="font-size: 10px;"> {{invoiceDetails.dcCharges}}</td>
                     </tr>
 
                     <tr>
