--- a/server/pdfTemplates/anjana/anjanaTransportInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaTransportInvoice.html
@@ -67,6 +67,7 @@
 <div class="container-main">
     <div class="table1">
         <table>
+            {{invoiceDetails}}
             <tr>
                 <th style="border:none">
                     <h3><b>SRI&nbsp;ANJANA&nbsp;TRANSPORT</b></h3>
@@ -284,6 +285,7 @@
                                 <tr>
                                     <td style="font-size: 10px">&nbsp;{{invoiceDetails.noOfDays}}</td>
                                     <td style="font-size: 10px">&nbsp;{{invoiceDetails.DCamount}}</td>
+                                    <td style="font-size: 10px;">{{invoiceDetails.dcCharges}}</td>
                                 </tr>
                             </table>
                         </td>
@@ -294,6 +296,7 @@
                         <td colspan="3" style="text-align: right;font-size: 10px">Total</td>
                         <td><p style="font-size:10px;text-align: center">
                             {{invoiceDetails.pdfTotalAmount }}
+                            {{invoiceDetails.dcCharges}}
                             <!--{{#each invoiceDetails.trip}}-->
                             <!--{{this.amountPerTonne}}-->
                             <!--{{/each}}</p>-->
