--- a/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaLogisticsInvoice.html
@@ -324,7 +324,7 @@
                     <p>IFSC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>HDFC0001639</b></p>
                     <p>Branch&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;<b>Vivekananda nagar</b></p>
                     <div style="border: 1px solid black;border-collapse: collapse;margin-right: -2px;margin-top: 10px;margin-bottom: -2px;width: 200px; ">
-                        <p style="margin-right: 20px; text-align: center;">for</p> <p style="font-size: 10px;text-align: center;"> SRI ANJANA TRANSPORT </p>
+                        <p style="margin-right: 20px; text-align: center;">for</p> <p style="font-size: 10px;text-align: center;"> SRI ANJANA LOGISTICS </p>
                         <br>
                         <br>
                         <p style="margin-right: 20px; text-align: center;"><b>Authorised Signature</b></p>
