--- a/server/pdfTemplates/anjana/anjanaTransportInvoice.html
+++ b/server/pdfTemplates/anjana/anjanaTransportInvoice.html
@@ -237,7 +237,7 @@
                     <tr>
                         <th style="font-size: 12px">S.No.</th>
                         <th colspan="" style="font-size: 12px">Particulars</th>
-                        <th style="font-size: 12px">Quantity</th>
+                        <th style="font-size: 12px">{{invoiceDetails.quantityType}}</th>
                         <th style="font-size: 12px">Amount</th>
                     </tr>
                     </thead>
@@ -251,7 +251,7 @@
                             {{/each}}
                             <p style="float: right;margin-right: 10px;"><b>{{invoiceDetails.specialInstructions}}</b></p>
                             <p> {{invoiceDetails.temparatureCargo}} </p>
-                            <p> {{invoiceDetails.quantityType}}</p>
+                            <!--<p> {{invoiceDetails.quantityType}}</p>-->
                             {{#each invoiceDetails.trip}}
                             <p>Loading Date:{{this.loadedOn}}</p>
                             {{/each}}
